Update EditableAndCssFlex  - Fix flex overflow for small screens

--- a/src/components/storylines/editableAndCssFlex/EditableAndCssFlex.scss
+++ b/src/components/storylines/editableAndCssFlex/EditableAndCssFlex.scss
@@ -4,6 +4,7 @@
 .editable-and-css-flex {
     &__container {
         display: flex;
+        flex-direction: column;
     }
 
     &__column {
